tests/dataset/tpc-ds/compiler/cpp/q28.error
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:58:8: error: redefinition of ‘struct StoreSale’
   58 | struct StoreSale {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:52:8: note: previous definition of ‘struct StoreSale’
   52 | struct StoreSale {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:73:12: error: ‘x’ was not declared in this scope
   73 |   decltype(x) x;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:73:12: error: ‘x’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:76:35: error: ‘struct Result’ has no member named ‘ss_list_price’
   76 |   decltype(std::declval<Result>().ss_list_price) key;
      |                                   ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:76:35: error: ‘struct Result’ has no member named ‘ss_list_price’
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:79:8: error: redefinition of ‘struct Result’
   79 | struct Result {
      |        ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:72:8: note: previous definition of ‘struct Result’
   72 | struct Result {
      |        ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:83:35: error: ‘struct Result’ has no member named ‘ss_list_price’
   83 |   decltype(std::declval<Result>().ss_list_price) key;
      |                                   ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:83:35: error: ‘struct Result’ has no member named ‘ss_list_price’
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:154:13: error: redefinition of ‘void __json(const StoreSale&)’
  154 | inline void __json(const StoreSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:129:13: note: ‘void __json(const StoreSale&)’ previously defined here
  129 | inline void __json(const StoreSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:194:26: error: ‘ss’ was not declared in this scope
  194 |     std::vector<decltype(ss)> __items;
      |                          ^~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:194:29: error: template argument 1 is invalid
  194 |     std::vector<decltype(ss)> __items;
      |                             ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:194:29: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:202:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  202 |       __items.push_back(ss);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:207:26: error: ‘ss’ was not declared in this scope
  207 |     std::vector<decltype(ss)> __items;
      |                          ^~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:207:29: error: template argument 1 is invalid
  207 |     std::vector<decltype(ss)> __items;
      |                             ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:207:29: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:215:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  215 |       __items.push_back(ss);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:221:40: error: ‘x’ was not declared in this scope
  221 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:221:56: error: template argument 1 is invalid
  221 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:221:56: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:222:33: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  222 |                   for (auto x : bucket1) {
      |                                 ^~~~~~~
      |                                 std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:222:33: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  222 |                   for (auto x : bucket1) {
      |                                 ^~~~~~~
      |                                 std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:223:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  223 |                     __items.push_back(x.ss_list_price);
      |                             ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:220:22: error: no matching function for call to ‘__avg(int)’
  220 |       __struct5{__avg(([&]() {
      |                 ~~~~~^~~~~~~~~
  221 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  222 |                   for (auto x : bucket1) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  223 |                     __items.push_back(x.ss_list_price);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  224 |                   }
      |                   ~   
  225 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  226 |                 })()),
      |                 ~~~~~ 
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:64:30: note: candidate: ‘template<class T> double __avg(const std::vector<T>&)’
   64 | template <typename T> double __avg(const std::vector<T> &v) {
      |                              ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:64:30: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:220:22: note:   mismatched types ‘const std::vector<T>’ and ‘int’
  220 |       __struct5{__avg(([&]() {
      |                 ~~~~~^~~~~~~~~
  221 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  222 |                   for (auto x : bucket1) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  223 |                     __items.push_back(x.ss_list_price);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  224 |                   }
      |                   ~   
  225 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  226 |                 })()),
      |                 ~~~~~ 
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:227:31: error: request for member ‘size’ in ‘bucket1’, which is of non-class type ‘int’
  227 |                 ((int)bucket1.size()),
      |                               ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:230:34: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  230 |                    for (auto x : bucket1) {
      |                                  ^~~~~~~
      |                                  std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:230:34: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  230 |                    for (auto x : bucket1) {
      |                                  ^~~~~~~
      |                                  std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:242:74: error: no matching function for call to ‘std::vector<Result>::vector(<brace-enclosed initializer list>)’
  242 |                            __struct3{__key, std::vector<Result>{Result{x}}});
      |                                                                          ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:5:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Result; _Alloc = std::allocator<Result>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; value_type = Result; allocator_type = std::allocator<Result>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; allocator_type = std::allocator<Result>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Result; _Alloc = std::allocator<Result>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:253:40: error: ‘x’ was not declared in this scope
  253 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:253:56: error: template argument 1 is invalid
  253 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:253:56: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:254:33: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  254 |                   for (auto x : bucket2) {
      |                                 ^~~~~~~
      |                                 std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:254:33: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  254 |                   for (auto x : bucket2) {
      |                                 ^~~~~~~
      |                                 std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:255:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  255 |                     __items.push_back(x.ss_list_price);
      |                             ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:252:22: error: no matching function for call to ‘__avg(int)’
  252 |                 __avg(([&]() {
      |                 ~~~~~^~~~~~~~~
  253 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  254 |                   for (auto x : bucket2) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  255 |                     __items.push_back(x.ss_list_price);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  256 |                   }
      |                   ~   
  257 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  258 |                 })()),
      |                 ~~~~~ 
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:64:30: note: candidate: ‘template<class T> double __avg(const std::vector<T>&)’
   64 | template <typename T> double __avg(const std::vector<T> &v) {
      |                              ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:64:30: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:252:22: note:   mismatched types ‘const std::vector<T>’ and ‘int’
  252 |                 __avg(([&]() {
      |                 ~~~~~^~~~~~~~~
  253 |                   std::vector<decltype(x.ss_list_price)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  254 |                   for (auto x : bucket2) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  255 |                     __items.push_back(x.ss_list_price);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  256 |                   }
      |                   ~   
  257 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  258 |                 })()),
      |                 ~~~~~ 
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:259:31: error: request for member ‘size’ in ‘bucket2’, which is of non-class type ‘int’
  259 |                 ((int)bucket2.size()),
      |                               ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:262:34: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  262 |                    for (auto x : bucket2) {
      |                                  ^~~~~~~
      |                                  std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:262:34: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  262 |                    for (auto x : bucket2) {
      |                                  ^~~~~~~
      |                                  std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq283960735320/001/prog.cpp:274:74: error: no matching function for call to ‘std::vector<Result>::vector(<brace-enclosed initializer list>)’
  274 |                            __struct4{__key, std::vector<Result>{Result{x}}});
      |                                                                          ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Result; _Alloc = std::allocator<Result>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>; std::__type_identity_t<_Alloc> = std::allocator<Result>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Result; _Alloc = std::allocator<Result>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; value_type = Result; allocator_type = std::allocator<Result>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; size_type = long unsigned int; allocator_type = std::allocator<Result>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Result; _Alloc = std::allocator<Result>; allocator_type = std::allocator<Result>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Result; _Alloc = std::allocator<Result>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
